# Vektor

./: .env  .gitignore  README.md  check_versions.py  main.py  pyproject.toml  requirements.txt  run.py  webapp.py
config/: default.yaml
results/: momentum_leaders_setups.csv  weinstein_setups.csv
src/: benchmarks.py  config.py  data_loader.py  finviz_engine.py  market_config.py  market_intl.py  market_us.py  plotter.py  registry.py  rotation.py  screener.py  strategy.py  test_screener.py  utils.py
strategies/: __init__.py  momentum_leaders.py  weinstein_setup.py
tests/: test_registry.py  test_screener.py  test_strategy_contract.py
web/: index.html
