[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vektor"
version = "0.1.0"
description = "Detection-only stock-setup screener with pluggable strategies (Weinstein and others)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "finvizfinance>=0.14",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
vektor = "run:main"

[tool.setuptools]
py-modules = ["run"]
packages = ["src", "strategies"]

[tool.ruff]
line-length = 100
target-version = "py310"
